<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_slight"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.liyuliang.mytime.widget.MyToolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleText="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/textfield_normal"
        android:orientation="horizontal">

        <com.liyuliang.mytime.widget.MyEditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/EnterPhoneNumber"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_delete_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:padding="@dimen/dp_5"
            android:src="@drawable/delete_grey" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.liyuliang.mytime.widget.MyEditText
            android:id="@+id/et_sms_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/textfield_normal"
            android:hint="@string/SMSVerificationCode"
            android:inputType="number"
            android:maxLength="10"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_18" />

        <com.liyuliang.mytime.widget.textview.MyTextView
            android:id="@+id/tv_getConfirmCode"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/btn_blue_selector"
            android:gravity="center"
            android:hint="@string/GetVerificationCode"
            android:padding="@dimen/dp_10" />

    </LinearLayout>

    <com.liyuliang.mytime.widget.textview.MyTextView
        android:id="@+id/tv_noSmsCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:text="@string/CanNotGetTheVerificationCode"
        android:textSize="@dimen/sp_14" />

    <com.liyuliang.mytime.widget.MyButton
        android:id="@+id/btnModify"
        style="@style/button_common_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:enabled="false"
        android:text="@string/ConfirmModification"
        android:textAllCaps="false"
        android:textColor="@color/white_alpha"
        android:textSize="@dimen/sp_20" />

</LinearLayout>
