<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/bg_popupwindow"
    android:orientation="vertical"
    android:padding="10dp">

    <com.liyuliang.mytime.widget.MyButton
        android:id="@+id/btn_select_photo"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/pop_first_selector"
        android:text="@string/SelectImageOrDocument"
        android:textAllCaps="false"
        android:textColor="@color/colorGreenPrimary"
        android:textSize="18sp" />

    <com.liyuliang.mytime.widget.MyButton
        android:id="@+id/btn_select_others"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@drawable/pop_last_selector"
        android:text="@string/SelectFile"
        android:textAllCaps="false"
        android:textColor="@color/colorGreenPrimary"
        android:textSize="18sp" />

    <com.liyuliang.mytime.widget.MyButton
        android:id="@+id/btn_select_cancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/pop_single_selector"
        android:text="@string/Cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorGreenPrimary"
        android:textSize="18sp" />

</LinearLayout>