<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.liyuliang.mytime.widget.textview.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/VersionCodeNo"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <com.liyuliang.mytime.widget.textview.MyTextView
                android:id="@+id/tv_versionName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.liyuliang.mytime.widget.textview.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ReleaseTime"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <com.liyuliang.mytime.widget.textview.MyTextView
                android:id="@+id/tv_versionTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

    </LinearLayout>

    <com.liyuliang.mytime.widget.textview.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/UpdateLog"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <com.liyuliang.mytime.widget.textview.MyTextView
        android:id="@+id/tv_versionLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16" />
</LinearLayout>