<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <com.liyuliang.mytime.widget.MyToolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleText="@string/app_name" />

    <com.liyuliang.mytime.widget.NoScrollViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray_6"
        android:overScrollMode="never" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">

        <LinearLayout
            android:id="@+id/ll_a"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:contentDescription="@null"
                android:padding="@dimen/dp_1"
                android:src="@drawable/countdown_selector" />

            <com.liyuliang.mytime.widget.textview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/countdown"
                android:textColor="@drawable/color_radiobutton"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_b"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:contentDescription="@null"
                android:padding="@dimen/dp_1"
                android:src="@drawable/anniversary_selector" />

            <com.liyuliang.mytime.widget.textview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/anniversary"
                android:textColor="@drawable/color_radiobutton"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_c"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="27dp"
                android:layout_height="@dimen/dp_24"
                android:contentDescription="@null"
                android:src="@drawable/schedule_selector" />

            <com.liyuliang.mytime.widget.textview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/schedule"
                android:textColor="@drawable/color_radiobutton"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_d"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:contentDescription="@null"
                android:src="@drawable/setting_selector" />

            <com.liyuliang.mytime.widget.textview.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/settings"
                android:textColor="@drawable/color_radiobutton"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>