<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_5"
    android:layout_marginEnd="@dimen/dp_5"
    android:background="@drawable/background_dialog_normal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <com.liyuliang.mytime.widget.textview.MyTextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="版本升级"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:orientation="horizontal">

        <com.liyuliang.mytime.widget.textview.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:scrollHorizontally="true"
            android:text="@string/CurrentVersion"
            android:textSize="@dimen/sp_16" />

        <com.liyuliang.mytime.widget.textview.MyTextView
            android:id="@+id/tv_currentVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:scrollHorizontally="true"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:orientation="horizontal">

        <com.liyuliang.mytime.widget.textview.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:scrollHorizontally="true"
            android:text="@string/LatestVersion"
            android:textSize="@dimen/sp_16" />

        <com.liyuliang.mytime.widget.textview.MyTextView
            android:id="@+id/tv_latestVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:scrollHorizontally="true"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <com.liyuliang.mytime.widget.textview.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:lineSpacingMultiplier="1.5"
        android:scrollHorizontally="true"
        android:text="@string/UpdateLog"
        android:textSize="@dimen/sp_16" />

    <com.liyuliang.mytime.widget.textview.MyTextView
        android:id="@+id/tv_versionLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:maxLines="10"
        android:scrollHorizontally="true"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@color/gray_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.liyuliang.mytime.widget.MyButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_button_dialog_selector_left"
                android:text="@string/Later"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/dp_2"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/gray_5" />

            <com.liyuliang.mytime.widget.MyButton
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_button_dialog_selector_right"
                android:text="@string/UpdateNow"
                android:textColor="@color/colorGreenPrimary"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>